add entities and dao layer